--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -8,5 +8,110 @@
                 <%=NavItem.name %> </a></li>
             <%})%>
     </ul>
-    <img class="hamburgerMenu" src="assets/img/menu.svg" alt="">
+    <img class="hamburgerMenu" id="hamburger" src="assets/img/menu.svg" alt="">
 </nav>
+
+<section class="hamburger-list" id="overlay">
+    <article class="internal">
+        <div class="head-text">
+            <h4>(6) Internal Works ©2020 c/o BASIC®</h4>
+            <h4>A collection of internal project and initiatives under the BASIC® brand.</h4>
+        </div>
+        <img src=" assets/img/close.svg" alt="" id="close">
+    </article>
+    <article class="internal-fiq">
+        <div>
+            <figure id="culture">
+                <img style="transition: all 1 linear;" src="assets/img/selected-work1.jpg" alt=""
+                    onmouseover="Img(this)" onmouseout="normalImg(this)">
+
+
+                <figcaption>
+                    <h2>Culture Manual® ©2018</h2>
+                    <h3>Agency Culture & Onboarding</h3>
+                    <p class="hidden">To help strengthen our culture and attract world class talent, we created the
+                        Culture Manual – an online guide for new hires that differentiates the employee onboarding
+                        process and builds alignment for our collective future.</p>
+                    <a href="#">VISIT THE SITE</a>
+
+                </figcaption>
+            </figure>
+            <p>01</p>
+        </div>
+        <div>
+            <figure class="moves">
+                <img src="assets/img/loves.jpg" alt="" onmouseover="Img(this)" onmouseout="normalImg(this)">
+
+
+                <figcaption>
+                    <h2>Moves® ©2019</h2>
+                    <h3>Our New HQ</h3>
+                    <p class="hidden">When we moved into our new HQ, we put together a site experience providing an
+                        in-depth look into the two-year process imagining, designing, and developing our new office we
+                        call home.</p>
+                    <a href="#">VISIT THE SITE</a>
+
+
+                </figcaption>
+            </figure>
+            <p>02</p>
+        </div>
+        <div>
+            <figure id="manual">
+                <img src="assets/img/selected-work3.jpg" alt="" onmouseover="Img(this)" onmouseout="normalImg(this)">
+
+
+                <figcaption>
+                    <h2>Culture Manual® ©2018</h2>
+                    <h3>Agency Culture & Onboarding</h3>
+                    <p class="hidden">To help strengthen our culture and attract world class talent, we created the
+                        Culture Manual – an online guide for new hires that differentiates the employee onboarding
+                        process and builds alignment for our collective future.</p>
+                    <a href="#">VISIT THE SITE</a>
+
+
+                </figcaption>
+            </figure>
+            <p>03</p>
+        </div>
+        <div>
+            <figure class="manual1">
+                <img src="assets/img/selected-work4.jpg" alt="" onmouseover="Img(this)" onmouseout="normalImg(this)">
+
+
+                <figcaption>
+                    <h2>Culture Manual® ©2018</h2>
+                    <h3>Agency Culture & Onboarding</h3>
+                    <p class="hidden">To help strengthen our culture and attract world class talent, we created the
+                        Culture Manual – an online guide for new hires that differentiates the employee onboarding
+                        process and builds alignment for our collective future.</p>
+                    <a href="#">VISIT THE SITE</a>
+
+
+                </figcaption>
+            </figure>
+            <p>04</p>
+        </div>
+        <div>
+            <figure class="manual2">
+                <img src="assets/img/ThinkImg2.jpg" alt="" onmouseover="Img(this)" onmouseout="normalImg(this)">
+
+
+                <figcaption>
+                    <h2>Culture Manual® ©2018</h2>
+                    <h3>Agency Culture & Onboarding</h3>
+                    <p class="hidden">To help strengthen our culture and attract world class talent, we created the
+                        Culture Manual – an online guide for new hires that differentiates the employee onboarding
+                        process and builds alignment for our collective future.</p>
+                    <a href="#">VISIT THE SITE</a>
+
+
+                </figcaption>
+            </figure>
+            <p>05</p>
+        </div>
+    </article>
+
+</section>
+
+<script src="/assets/js/main.js"></script> 
